Switch to use pre-target handler in exo::Keyboard.

This is a refactoring change to let ShellSurfaceWidget::OnKeyEvent
process all key events.
This change should make standard chrome key bindings work for simple
wayland test clients that are not creating a exo::Keyboard instance.

Bug: 768805
Test: No behavior change. Tests pass.
Change-Id: Ia8926de9a56f0f6efc2ff01e19eb53602cbbff0b
Reviewed-on: https://chromium-review.googlesource.com/684004
Commit-Queue: Yuichiro Hanada <yhanada@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504930}
Former-commit-id: 91655e60b5e62d94a241c057a0c7aa36b823f3ef