components/exo/shell_surface.cc
@@ -63,24 +63,14 @@ constexpr int kOrientationLockTimeoutMs = 2500;
 // fullscreen or pinned state.
 constexpr int kMaximizedOrFullscreenOrPinnedLockTimeoutMs = 100;
 
-// This is a struct for accelerator keys.
-struct Accelerator {
+// The accelerator keys used to close ShellSurfaces.
+const struct {
   ui::KeyboardCode keycode;
   int modifiers;
-};
-
-// The accelerator keys used to close ShellSurfaces.
-const Accelerator kCloseWindowAccelerators[] = {
+} kCloseWindowAccelerators[] = {
     {ui::VKEY_W, ui::EF_CONTROL_DOWN},
     {ui::VKEY_W, ui::EF_SHIFT_DOWN | ui::EF_CONTROL_DOWN},
     {ui::VKEY_F4, ui::EF_ALT_DOWN}};
-
-// The accelerator keys reserved to be processed by the focus manager.
-const Accelerator kReservedAccelerators[] = {
-    {ui::VKEY_SPACE, ui::EF_CONTROL_DOWN},
-    {ui::VKEY_SPACE, ui::EF_SHIFT_DOWN | ui::EF_CONTROL_DOWN},
-    {ui::VKEY_F13, ui::EF_NONE},
-    {ui::VKEY_I, ui::EF_SHIFT_DOWN | ui::EF_ALT_DOWN}};
 
 class CustomFrameView : public views::NonClientFrameView {
  public:
@@ -206,18 +196,10 @@ class ShellSurfaceWidget : public views::Widget {
   // Overridden from views::Widget
   void Close() override { shell_surface_->Close(); }
   void OnKeyEvent(ui::KeyEvent* event) override {
-    // TODO(hidehiko): Handle ESC + SHIFT + COMMAND accelerator key
-    // to escape pinned mode.
-    for (const auto& entry : kReservedAccelerators) {
-      // Handle only reserved accelerators.
-      if (event->flags() == entry.modifiers &&
-          event->key_code() == entry.keycode) {
-        if (GetFocusManager()->ProcessAccelerator(ui::Accelerator(*event)))
-          event->StopPropagation();
-      }
-    }
-    // Do not call Widget::OnKeyEvent that eats focus management keys (like the
-    // tab key) as well.
+    // Handle only accelerators. Do not call Widget::OnKeyEvent that eats focus
+    // management keys (like the tab key) as well.
+    if (GetFocusManager()->ProcessAccelerator(ui::Accelerator(*event)))
+      event->SetHandled();
   }
 
  private:
